--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,14 +24,17 @@ transformers = "^4.22.1"
 pytest = "^7.1.3"
 ipdb = "^0.13.9"
 mypy = "^0.971"
-isort = "^5.10.1"
 black = "^22.8.0"
+usort = "^1.0.5"
 
 [tool.poetry.group.medical.dependencies]
 pydicom = "^2.3.0"
 pylibjpeg = "^1.4.0"
 pylibjpeg-libjpeg = "^1.3.1"
 pylibjpeg-openjpeg = "^1.2.1"
+
+[tool.black]
+line-length = 79
 
 [build-system]
 requires = ["poetry-core"]
