--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ timm = "^0.6.7"
 torchmetrics = "^0.9.3"
 tqdm = "^4.64.1"
 transformers = "^4.22.1"
+pandas = "^1.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
