--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,37 +1,35 @@
 [tool.poetry]
 name = "blazingai"
 version = "2.0.0"
-description = "A framework to accelerate AI development."
-license = "MIT"
+description = "A framework to accelerate AI development"
 authors = ["Gianluca Rossi <gr.gianlucarossi@gmail.com>"]
-maintainers = ["Gianluca Rossi <gr.gianlucarossi@gmail.com>"]
+license = "MIT"
 readme = "README.md"
-packages = [{include = "blazingai"}]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.12"
-scipy = "^1.9.1"
+python = "^3.8"
+scipy = "^1.9.3"
 loguru = "^0.6.0"
 omegaconf = "^2.2.3"
-pytorch-lightning = "^1.7.7"
-scikit-learn = "^1.1.2"
-timm = "^0.6.7"
-torchmetrics = "^0.9.3"
+pytorch-lightning = "^1.8.2"
+scikit-learn = "^1.1.3"
+timm = "^0.6.11"
+torchmetrics = "^0.10.3"
 tqdm = "^4.64.1"
-transformers = "^4.22.1"
-pandas = "^1.5.0"
+transformers = "^4.24.0"
+pandas = "^1.5.1"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.1.3"
+pytest = "^7.2.0"
 ipdb = "^0.13.9"
-mypy = "^0.971"
-black = "^22.8.0"
+mypy = "^0.991"
+black = "^22.10.0"
 usort = "^1.0.5"
 
 [tool.poetry.group.medical.dependencies]
-pydicom = "^2.3.0"
+pydicom = "^2.3.1"
 pylibjpeg = "^1.4.0"
-pylibjpeg-libjpeg = "^1.3.1"
+pylibjpeg-libjpeg = "^1.3.2"
 pylibjpeg-openjpeg = "^1.2.1"
 
 [tool.black]
