--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,13 @@ python = "^3.8"
 scipy = "^1.9.3"
 loguru = "^0.6.0"
 omegaconf = "^2.2.3"
-pytorch-lightning = "^1.8.2"
 scikit-learn = "^1.1.3"
 timm = "^0.6.11"
 torchmetrics = "^0.10.3"
 tqdm = "^4.64.1"
 transformers = "^4.24.0"
 pandas = "^1.5.1"
+lightning = "^1.8.3.post1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
