--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ pylibjpeg-libjpeg = "^1.3.2"
 pylibjpeg-openjpeg = "^1.2.1"
 
 [tool.black]
-line-length = 79
+# line-length = 79
 
 [build-system]
 requires = ["poetry-core"]
