--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ tqdm = "^4.64.1"
 transformers = "^4.24.0"
 pandas = "^1.5.1"
 lightning = "^1.8.3.post1"
+datasets = "^2.7.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
