--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ transformers = "^4.24.0"
 pandas = "^1.5.1"
 lightning = "^1.8.3.post1"
 datasets = "^2.7.1"
+sentencepiece = "^0.1.97"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
