--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ torchmetrics = "^0.10.3"
 tqdm = "^4.64.1"
 transformers = "^4.24.0"
 pandas = "^1.5.1"
-lightning = "^1.8.3.post1"
+lightning = "^1.9.0"
 datasets = "^2.7.1"
 sentencepiece = "^0.1.97"
 
