--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,12 +20,12 @@ pandas = "^1.5.1"
 lightning = "^1.9.0"
 datasets = "^2.7.1"
 sentencepiece = "^0.1.97"
+ruff = "^0.3.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 ipdb = "^0.13.9"
 mypy = "^0.991"
-black = "^22.10.0"
 usort = "^1.0.5"
 
 [tool.poetry.group.medical.dependencies]
@@ -33,9 +33,6 @@ pydicom = "^2.3.1"
 pylibjpeg = "^1.4.0"
 pylibjpeg-libjpeg = "^1.3.2"
 pylibjpeg-openjpeg = "^1.2.1"
-
-[tool.black]
-# line-length = 79
 
 [build-system]
 requires = ["poetry-core"]
