--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,8 +19,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          curl -sSL https://install.python-poetry.org | python3 -
-          poetry install --all-extras
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          uv venv
+          VIRTUAL_ENV=./.venv
+          uv pip install -e ".[dev,medical]"
       # - name: Lint with flake8
       #   run: |
       #     # stop the build if there are Python syntax errors or undefined names
@@ -29,4 +31,5 @@ jobs:
       #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          poetry run pytest
+          source .venv/bin/activate
+          pytest
