--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,39 @@
-[tool.poetry]
+[project]
+requires-python = ">3.8"
 name = "blazingai"
 version = "2.0.0"
 description = "A framework to accelerate AI development"
-authors = ["Gianluca Rossi <gr.gianlucarossi@gmail.com>"]
-license = "MIT"
+authors = [{name= "Gianluca Rossi" , email= "gr.gianlucarossi@gmail.com" }]
+license = {file = "LICENSE"}
 readme = "README.md"
+dependencies = [
+  "scipy>1.9.3",
+  "loguru>0.6.0",
+  "omegaconf>2.2.3",
+  "scikit-learn>1.1.3",
+  "timm>0.6.11",
+  "torchmetrics>0.10.3",
+  "tqdm>4.64.1",
+  "transformers>4.24.0",
+  "pandas>1.5.1",
+  "lightning>1.9.0",
+  "torch",
+  "numpy",
+  "datasets>2.7.1",
+  "sentencepiece>0.1.97",
+]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-scipy = "^1.9.3"
-loguru = "^0.6.0"
-omegaconf = "^2.2.3"
-scikit-learn = "^1.1.3"
-timm = "^0.6.11"
-torchmetrics = "^0.10.3"
-tqdm = "^4.64.1"
-transformers = "^4.24.0"
-pandas = "^1.5.1"
-lightning = "^1.9.0"
-datasets = "^2.7.1"
-sentencepiece = "^0.1.97"
-ruff = "^0.3.3"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.2.0"
-ipdb = "^0.13.9"
-mypy = "^0.991"
-usort = "^1.0.5"
-
-[tool.poetry.group.medical.dependencies]
-pydicom = "^2.3.1"
-pylibjpeg = "^1.4.0"
-pylibjpeg-libjpeg = "^1.3.2"
-pylibjpeg-openjpeg = "^1.2.1"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[project.optional-dependencies]
+dev = [
+  "ruff",
+  "pytest",
+  "ipdb",
+  "mypy",
+  "usort",
+]
+medical = [
+  "pydicom>2.3.1",
+  "pylibjpeg>1.4.0",
+  "pylibjpeg-libjpeg>1.3.2",
+  "pylibjpeg-openjpeg>1.2.1",
+]
