--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,8 @@ fsspec==2024.2.0
     #   lightning
     #   pytorch-lightning
     #   torch
+greenlet==3.0.3
+    # via pynvim
 huggingface-hub==0.21.4
     # via
     #   datasets
@@ -95,6 +97,8 @@ moreorless==0.4.0
     # via usort
 mpmath==1.3.0
     # via sympy
+msgpack==1.0.8
+    # via pynvim
 multidict==6.0.5
     # via
     #   aiohttp
@@ -193,6 +197,7 @@ pygments==2.17.2
 pylibjpeg==2.0.0
 pylibjpeg-libjpeg==2.0.2
 pylibjpeg-openjpeg==2.1.1
+pynvim==0.5.0
 pytest==8.1.1
 python-dateutil==2.9.0.post0
     # via pandas
