--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,34 +7,35 @@ authors = [{name= "Gianluca Rossi" , email= "gr.gianlucarossi@gmail.com" }]
 license = {file = "LICENSE"}
 readme = "README.md"
 dependencies = [
-  "scipy>1.9.3",
-  "loguru>0.6.0",
-  "omegaconf>2.2.3",
-  "scikit-learn>1.1.3",
-  "timm>0.6.11",
-  "torchmetrics>0.10.3",
-  "tqdm>4.64.1",
-  "transformers>4.24.0",
-  "pandas>1.5.1",
+  "scipy>=1.9.3",
+  "loguru>=0.6.0",
+  "omegaconf>=2.2.3",
+  "scikit-learn>=1.1.3",
+  "timm>=0.6.11",
+  "torchmetrics>=0.10.3",
+  "tqdm>=4.64.1",
+  "transformers>=4.24.0",
+  "pandas>=1.5.1",
   "lightning>=2.2.0",
   "torch",
   "numpy",
-  "datasets>2.7.1",
-  "sentencepiece>0.1.97",
+  "datasets>=2.7.1",
+  "sentencepiece>=0.1.97",
 ]
 
 [project.optional-dependencies]
 dev = [
   "ruff",
   "pytest",
+  "pytest-cov",
   "ipdb",
   "mypy",
   "usort",
-  "pynvim",
+  "pynvim", # required for nvim lsp
 ]
 medical = [
-  "pydicom>2.3.1",
-  "pylibjpeg>1.4.0",
-  "pylibjpeg-libjpeg>1.3.2",
-  "pylibjpeg-openjpeg>1.2.1",
+  "pydicom>=2.3.1",
+  "pylibjpeg>=1.4.0",
+  "pylibjpeg-libjpeg>=1.3.2",
+  "pylibjpeg-openjpeg>=1.2.1",
 ]
