--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ click==8.1.7
     # via
     #   moreorless
     #   usort
+coverage==7.4.4
+    # via pytest-cov
 datasets==2.18.0
 decorator==5.1.1
     # via
@@ -199,6 +201,8 @@ pylibjpeg-libjpeg==2.0.2
 pylibjpeg-openjpeg==2.1.1
 pynvim==0.5.0
 pytest==8.1.1
+    # via pytest-cov
+pytest-cov==4.1.0
 python-dateutil==2.9.0.post0
     # via pandas
 pytorch-lightning==2.2.1
@@ -252,6 +256,7 @@ toml==0.10.2
     # via usort
 tomli==2.0.1
     # via
+    #   coverage
     #   ipdb
     #   mypy
     #   pytest
