--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
-requires-python = ">3.8"
+requires-python = ">=3.8"
 name = "blazingai"
 version = "2.0.0"
 description = "A framework to accelerate AI development"
 authors = [{name= "Gianluca Rossi" , email= "gr.gianlucarossi@gmail.com" }]
 license = {file = "LICENSE"}
-readme = "README.md"
+readme = {file = "README.md"}
 dependencies = [
   "scipy>=1.9.3",
   "loguru>=0.6.0",
