--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ version = "2.0.0"
 description = "A framework to accelerate AI development"
 authors = [{name= "Gianluca Rossi" , email= "gr.gianlucarossi@gmail.com" }]
 license = {file = "LICENSE"}
-readme = {file = "README.md"}
+readme = "README.md"
 dependencies = [
   "scipy>=1.9.3",
   "loguru>=0.6.0",
