build: increase HTTP timeout for CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,7 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           uv venv
           VIRTUAL_ENV=./.venv
+          UV_HTTP_TIMEOUT=600  # often hitting network timeout in GitHub Action (CI)
           uv pip install -e ".[dev,medical]"
       - name: Test with pytest
         run: |
