--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,14 @@ medical = [
   "pylibjpeg-libjpeg>=1.3.2",
   "pylibjpeg-openjpeg>=1.2.1",
 ]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+norecursedirs = [
+  "*.egg-info",
+  ".*",
+  "blazingai",
+  "build",
+  "dist",
+]
+markers = ["slow"]
