--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,20 +7,21 @@ requires-python = ">=3.8"
 license = {file = "LICENSE"}
 readme = "README.md"
 dependencies = [
-  "scipy>=1.9.3",
+  "datasets>=2.7.1",
+  "lightning>=2.2.0",
   "loguru>=0.6.0",
+  "matplotlib",
+  "numpy",
   "omegaconf>=2.2.3",
+  "pandas>=1.5.1",
   "scikit-learn>=1.1.3",
+  "scipy>=1.9.3",
+  "sentencepiece>=0.1.97",
   "timm>=0.6.11",
+  "torch",
   "torchmetrics>=0.10.3",
   "tqdm>=4.64.1",
   "transformers>=4.24.0",
-  "pandas>=1.5.1",
-  "lightning>=2.2.0",
-  "torch",
-  "numpy",
-  "datasets>=2.7.1",
-  "sentencepiece>=0.1.97",
 ]
 
 [project.optional-dependencies]
@@ -55,3 +56,6 @@ markers = ["slow"]
 extend-include = ["*.ipynb"]
 lint.extend-select = ["I"]
 lint.extend-ignore = ["E741"]
+
+[tool.basedpyright]
+typeCheckingMode = "standard"
