--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,12 @@ click==8.1.7
     # via
     #   moreorless
     #   usort
+contourpy==1.2.1
+    # via matplotlib
 coverage==7.4.4
     # via pytest-cov
+cycler==0.12.1
+    # via matplotlib
 datasets==2.18.0
 decorator==5.1.1
     # via
@@ -42,6 +46,8 @@ filelock==3.13.1
     #   torch
     #   transformers
     #   triton
+fonttools==4.50.0
+    # via matplotlib
 frozenlist==1.4.1
     # via
     #   aiohttp
@@ -76,6 +82,8 @@ jinja2==3.1.3
     # via torch
 joblib==1.3.2
     # via scikit-learn
+kiwisolver==1.4.5
+    # via matplotlib
 libcst==1.2.0
     # via usort
 lightning==2.2.1
@@ -87,6 +95,7 @@ lightning-utilities==0.11.0
 loguru==0.7.2
 markupsafe==2.1.5
     # via jinja2
+matplotlib==3.8.4
 matplotlib-inline==0.1.6
     # via ipython
 moreorless==0.4.0
@@ -110,8 +119,10 @@ networkx==3.2.1
     # via torch
 numpy==1.26.4
     # via
+    #   contourpy
     #   datasets
     #   lightning
+    #   matplotlib
     #   pandas
     #   pyarrow
     #   pylibjpeg
@@ -161,6 +172,7 @@ packaging==24.0
     #   huggingface-hub
     #   lightning
     #   lightning-utilities
+    #   matplotlib
     #   pytest
     #   pytorch-lightning
     #   torchmetrics
@@ -174,7 +186,9 @@ pathspec==0.12.1
 pexpect==4.9.0
     # via ipython
 pillow==10.2.0
-    # via torchvision
+    # via
+    #   matplotlib
+    #   torchvision
 pluggy==1.4.0
     # via pytest
 prompt-toolkit==3.0.43
@@ -194,11 +208,15 @@ pylibjpeg==2.0.0
 pylibjpeg-libjpeg==2.0.2
 pylibjpeg-openjpeg==2.2.0
 pynvim==0.5.0
+pyparsing==3.1.2
+    # via matplotlib
 pytest==8.1.1
     # via pytest-cov
 pytest-cov==5.0.0
 python-dateutil==2.9.0.post0
-    # via pandas
+    # via
+    #   matplotlib
+    #   pandas
 pytorch-lightning==2.2.1
     # via lightning
 pytz==2024.1
