--- a/requirements.txt
+++ b/requirements.txt
@@ -11,17 +11,11 @@ antlr4-python3-runtime==4.9.3
 asttokens==2.4.1
     # via stack-data
 attrs==23.2.0
-    # via
-    #   aiohttp
-    #   usort
+    # via aiohttp
 certifi==2024.2.2
     # via requests
 charset-normalizer==3.3.2
     # via requests
-click==8.1.7
-    # via
-    #   moreorless
-    #   usort
 contourpy==1.2.1
     # via matplotlib
 coverage==7.4.4
@@ -84,8 +78,6 @@ joblib==1.3.2
     # via scikit-learn
 kiwisolver==1.4.5
     # via matplotlib
-libcst==1.2.0
-    # via usort
 lightning==2.2.1
 lightning-utilities==0.11.0
     # via
@@ -98,8 +90,6 @@ markupsafe==2.1.5
 matplotlib==3.8.4
 matplotlib-inline==0.1.6
     # via ipython
-moreorless==0.4.0
-    # via usort
 mpmath==1.3.0
     # via sympy
 msgpack==1.0.8
@@ -112,9 +102,7 @@ multiprocess==0.70.16
     # via datasets
 mypy==1.9.0
 mypy-extensions==1.0.0
-    # via
-    #   mypy
-    #   typing-inspect
+    # via mypy
 networkx==3.2.1
     # via torch
 numpy==1.26.4
@@ -181,8 +169,6 @@ pandas==2.2.1
     # via datasets
 parso==0.8.3
     # via jedi
-pathspec==0.12.1
-    # via trailrunner
 pexpect==4.9.0
     # via ipython
 pillow==10.2.0
@@ -225,7 +211,6 @@ pyyaml==6.0.1
     # via
     #   datasets
     #   huggingface-hub
-    #   libcst
     #   lightning
     #   omegaconf
     #   pytorch-lightning
@@ -255,8 +240,6 @@ six==1.16.0
     #   python-dateutil
 stack-data==0.6.3
     # via ipython
-stdlibs==2024.1.28
-    # via usort
 sympy==1.12
     # via torch
 threadpoolctl==3.4.0
@@ -264,8 +247,6 @@ threadpoolctl==3.4.0
 timm==0.9.16
 tokenizers==0.15.2
     # via transformers
-toml==0.10.2
-    # via usort
 torch==2.2.1
     # via
     #   lightning
@@ -286,8 +267,6 @@ tqdm==4.66.2
     #   lightning
     #   pytorch-lightning
     #   transformers
-trailrunner==1.4.0
-    # via usort
 traitlets==5.14.2
     # via
     #   ipython
@@ -298,20 +277,15 @@ triton==2.2.0
 typing-extensions==4.10.0
     # via
     #   huggingface-hub
-    #   libcst
     #   lightning
     #   lightning-utilities
     #   mypy
     #   pytorch-lightning
     #   torch
-    #   typing-inspect
-typing-inspect==0.9.0
-    # via libcst
 tzdata==2024.1
     # via pandas
 urllib3==2.2.1
     # via requests
-usort==1.0.8.post1
 wcwidth==0.2.13
     # via prompt-toolkit
 xxhash==3.4.1
